# Thesis-Home

./: .gitignore  .gitmodules  ProxyVotingSystem.drawio  initial.ipynb  main.py  numberline.py  requirements.txt  utility.py
ProxyEstimateSystem/: .gitignore  ArrowExample.cpp  CMakeLists.txt
ProxyEstimateSystem/ProxyEstimateSystem/: Agent.h  ArrowUtilities.cpp  ArrowUtilities.h  CMakeLists.txt  DataRow.h  InactiveVoter.h  Properties.h  ProxyEstimateSystem.cpp  ProxyEstimateSystem.h  ProxySystem.cpp  ProxySystem.h  Rankings.cpp  Rankings.h  TruthEstimator.h  Utilities.h  main.cpp
ProxyEstimateSystem/ProxyEstimateSystem/DistributionStrategies/: BetaDistribution.h  DistributionStrategies.h  DistributionStrategy.h  GaussianDistribution.h  UniformDistribution.h
ProxyEstimateSystem/ProxyEstimateSystem/VotingMechanisms/: CMakeLists.txt  VotingMechanism.h  VotingMechanisms.h
ProxyEstimateSystem/ProxyEstimateSystem/VotingMechanisms/Average/: Average.h  InstantRunoffMechanism.h  MeanMechanism.h  RankedChoiceMechanism.h  WeightedInstantRunoffMechanism.h  WeightlessAverageAllMechanism.h  WeightlessAverageProxiesMechanism.h
ProxyEstimateSystem/ProxyEstimateSystem/VotingMechanisms/Candidate/: CMakeLists.txt  Candidate.h  InstantRunoffMechanism.h  MedianMechanism.h  PluralityMechanism.h  WeightedInstantRunoffMechanism.h
ProxyEstimateSystem/ProxyEstimateSystem/WeightingMechanisms/: BordaMechanism.h  ClosestMechanism.h  DistanceMechanism.h  EqualWeightMechanism.h  NoOpMechanism.h  WeightingMechanism.h  WeightingMechanisms.h
__tests__/: TestBetaDistribution.py  __init__.py
__tests__/distribution_strategies/: test_GaussianDistribution.py  test_UniformDistribution.py  test_beta_distribution.py  test_uniform_distribution.py
__tests__/util/: test_agent.py
__tests__/weighting_mechanisms/: test_borda_mechanism.py  test_closest_mechanism.py  test_distance_mechanism.py
proxy_estimate_system/: __init__.py  agent.py  async_proxy_system.py  inactive_voter.py  proxy_system.py  ranking_item.py  rankings.py  seedable.py  truth_estimator.py
proxy_estimate_system/distribution_strategies/: __init__.py  beta_distribution.py  distribution_strategy.py  gaussian_distribution.py  (+1 more)
proxy_system/: Agent.py  AsyncProxySystem.py  InactiveVoter.py  ProxySystem.py  Rankings.py  TruthEstimator.py  __init__.py  async_proxy_system.py  inactive_voter.py  proxy_system.py  ranking_item.py  truth_estimator.py
voting_rules/: __init__.py  _test_median.py  mean.py  median.py
(+58 files in other folders)
